complate function books
